--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,10 @@
 spring.application.name=X-Store
-server.port=8080
-
-#day la url  online deploy
-#spring.datasource.url=jdbc:mysql://root:sakcHWMPQwtKAjABSXOLXHHpNjQVmavt@hopper.proxy.rlwy.net:39681/railway
-#spring.datasource.username=root
-#spring.datasource.password=sakcHWMPQwtKAjABSXOLXHHpNjQVmavt
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+server.port=${APP_PORT}
 
 #local
-spring.datasource.url=jdbc:mariadb://localhost:3306/xstoredb?createDatabaseIfNotExist=true
+spring.datasource.url=${DB_URL}
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
@@ -25,16 +18,17 @@ spring.sql.init.continue-on-error=false
 spring.main.allow-bean-definition-overriding=true
 
 # Return URLs
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=ngochien.140604@gmail.com
-spring.mail.password=gsfiaphgmhrcegdi
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 
-# Gi?i h?n max file upload
+# Cau hinh upload file
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+#Cau hinh log
 logging.file.name=logs/logs.txt
